--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,12 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+/*dependencies {
+    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+}*/
+
 android {
     namespace = "com.varuna.varuna_new"
     compileSdk = flutter.compileSdkVersion
