--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   video_player: ^2.9.2
   url_launcher: ^6.0.20
   firebase_core: ^3.6.0
@@ -56,6 +50,21 @@ dev_dependencies:
   google_sign_in: ^6.2.1
   file_picker: ^8.1.3
   excel: ^4.0.6
+  flutter_launcher_icons: ^0.14.1
+  permission_handler: ^11.1.0
+  device_info_plus: ^11.1.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
+
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -76,6 +85,9 @@ flutter:
   assets:
     - assets/images/
     - assets/videos/
+
+
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
